# GetSetPoCCopilotEdition

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
getset_pox_mcp_server/: __init__.py  auth.py  main_http.py  server.py  services_adapter.py
getset_pox_mcp_server/tools/: __init__.py  diagnostics_tools.py  eid_tools.py  iga_tools.py  internet_access_tools.py  intune_tools.py  poc_tools.py
