[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getset-pox-mcp-server"
version = "1.0.0"
description = "MCP server wrapping GetSetPOx Microsoft Graph services — compatible with Cline, GitHub Copilot, and Microsoft Copilot Studio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GetSetPOx", email = "admin@example.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "microsoft-graph",
    "entra-id",
    "intune",
    "copilot-studio",
    "cline",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # MCP SDK — FastMCP is bundled in mcp >= 1.2
    "mcp>=1.2.0",
    # Microsoft Authentication Library (client credentials flow)
    "msal>=1.28.0",
    # HTTP client used by upstream services
    "httpx>=0.27.0",
    # Pydantic for data validation in upstream services
    "pydantic>=2.0.0",
    # .env file support
    "python-dotenv>=1.0.0",
    # HTTP transport for Copilot Studio / Azure Container Apps
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    # X.509 certificate operations (TLS inspection tool)
    "cryptography>=42.0.0",
    # Upstream services package (local path install)
    "getset-pox-mcp @ file:///${PROJECT_ROOT}/GetSetPOx_repo",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/jeevanbisht/GetSetPOx"
Repository = "https://github.com/jeevanbisht/GetSetPOx"

[project.scripts]
getset-pox-mcp-server = "getset_pox_mcp_server.server:main"
getset-pox-mcp-server-http = "getset_pox_mcp_server.main_http:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["getset_pox_mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["mcp.*", "msal.*", "getset_pox_mcp.*"]
ignore_missing_imports = true